adding mongodb- get data and update data in table

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -22,7 +22,15 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "@shared": [
+        "../../packages/shared/index"
+      ],
+      "@shared/*": [
+        "../../packages/shared/*"
+      ]
+    }
   },
   "include": ["src"]
 }
