--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -3,5 +3,15 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "paths": {
+      "@shared": [
+        "../../packages/shared/index"
+      ],
+      "@shared/*": [
+        "../../packages/shared/*"
+      ]
+    }
+  }
 }
