--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,14 +12,19 @@
     "devStart": "nodemon --exec tsx src/index.ts"
   },
   "dependencies": {
+    "@shared": "file:../../packages/shared",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "mongoose": "^9.0.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20.10.0",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.11",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
