secure app and prepare for deployment

--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "expense-tracker-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "tailwindcss": "^4.1.18"
+    "build:client": "npm run build -w apps/client",
+    "build:server": "npm run build -w apps/server",
+    "start:server": "cd apps/server && npm run start",
+    "dev:client": "cd apps/client && npm run dev",
+    "dev:server": "cd apps/server && npm run dev"
   }
 }
