--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,16 +7,17 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node dist/index.js",
+    "start": "tsx dist/index.js",
     "lint": "eslint .",
     "devStart": "nodemon --exec tsx src/index.ts"
   },
   "dependencies": {
-    "@shared": "file:../../packages/shared",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "firebase-admin": "^13.6.0",
     "mongoose": "^9.0.2",
+    "shared": "file:../../packages/shared",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
